--- a/MosqueraAnthonny_TareaApuntes.csproj
+++ b/MosqueraAnthonny_TareaApuntes.csproj
@@ -73,6 +73,9 @@
 	  <MauiXaml Update="AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="InicioPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
