agregamos un tab con su respectiva funcionalidad para ver las notas

--- a/MosqueraAnthonny_TareaApuntes.csproj
+++ b/MosqueraAnthonny_TareaApuntes.csproj
@@ -88,6 +88,9 @@
 	  <MauiXaml Update="NuevaNotaPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="VerNotasPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
